Average Ratings Fix
No longer bugs out when average ratings /0

--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -25,5 +25,8 @@
 	<li><%= rating.score %></li>
 	<% end %>
 </ul>
+<% if @idea.ratings.count != 0 %>
 <p>Average</p>
 <%= @idea.average_rating%>
+
+<% end %>
